[package]
name = "pinned-bucket"
edition = "2021"
version = "0.4.1"
description = "Mutable container for pinned and immutable items."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/pinned-bucket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
strict = []

[dependencies]

[dev-dependencies]
rayon = "1"
